# pyCOTS

./: .gitignore  LICENSE  README.md  pyproject.toml
pycots/: cli.py  fasta.py  matching.py  plot.py
tests/: test_cli.py  test_fasta.py  test_matching.py  test_plot.py
tests/data/: chrM.vcf.gz.tbi  gnomad_af01_snps_chr21.vcf.bgz  gnomad_af01_snps_chr21.vcf.bgz.tbi  gnomad_test_chr21.vcf.gz.tbi
